fix spacing

--- a/packages/scaffold/MantineMain.module.css
+++ b/packages/scaffold/MantineMain.module.css
@@ -1,11 +1,9 @@
 .app {
-    padding-left: var(--mantine-spacing-md);
-    padding-right: var(--mantine-spacing-md);
+    --app-shell-padding: var(--mantine-spacing-md);
 }
 
 @media screen and (max-width: 48em) {
     .app {
-        padding-left: 0;
-        padding-right: 0;
+         --app-shell-padding: 0;
     }
 }
